# fastapi-wiki

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  start.sh
.github/workflows/: depoly.yaml  main.yml
app/: main.py
app/core/: database.py
app/router/: root_page.py
